# practice-problems

./: .gitignore  README.md
java/: pom.xml
java/src/main/java/us/hadam/practice/arrays/: MajorityElement.java  MergeArrays.java  RemoveDuplicatesI.java  RemoveDuplicatesII.java  RemoveElement.java
java/src/main/java/us/hadam/practice/binarytree/: InvertTree.java  IsSameTree.java  IsSymmetric.java  KthSmallest.java  MaxDepth.java
java/src/main/java/us/hadam/practice/design/: LRUCache.java
java/src/main/java/us/hadam/practice/divideconquer/: MergeKSortedLists.java  SortArrayToBST.java
java/src/main/java/us/hadam/practice/dynamic/: HouseRobber.java  Stairs.java  Triangle.java
java/src/main/java/us/hadam/practice/graph/: MinHeightTree.java
java/src/test/resources/testdata/lrucache/: cases.jsonl
python/: pyproject.toml
python/arrays/: answer.py  longest_consecutive.py
python/heap/: ksort.py
python/matrix/: matrix-2.py
python/src/problems/arrays/: longest_consecutive.py  test_longest_consecutive.py
python/src/problems/heap/: ksort.py
python/src/problems/map_and_set/: equal_row_pair_columns.py  test_equal_row_pair_columns.py
python/src/problems/matrix/: matrix-2.py
python/src/problems/slidingwindow/: longest_subarray_of_ones_deleting_one_element.py  max_consecutive_ones_3.py  test_longest_subarray_of_ones_deleting_one_element.py  test_max_consecutive_ones_3.py
python/src/problems/stack/: remove_stars.py
python/src/problems/trees/: de-and-serialize.py
python/trees/: de-and-serialize.py
(+37 files in other folders)
