[tool.poetry]
name = "problems"
version = "0.1.0"
description = ""
authors = ["mhadam <michael@hadam.us>"]
license = "MIT license"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
